--- a/hyperparameters.toml
+++ b/hyperparameters.toml
@@ -1,5 +1,6 @@
-
-batch_size = 32 # this is for getting started, might need to be changed later
+# mac freezes with batch_size = 1024, but doesn't crash... to investigate
+# super slow with 512 batch size
+batch_size = 128
 input_dimensions = 256
 
 # Sequence related parameters
@@ -10,7 +11,7 @@ num_heads = 8
 learning_rate = 0.00003
 
 # Iteration and save parameters
-num_iters = 20
+num_iters = 2000
 save_interval = 10
 eval_interval = 100
 
