mv vocab size to config

--- a/configs/mini.toml
+++ b/configs/mini.toml
@@ -4,5 +4,7 @@ checkpoint_dir = './checkpoints/mini'
 dataset = 'mini'
 tokenizer = 'mini'
 
+vocab_size = 65  # this is for shakespeare homemade encoder. Could calculate it
+
 # At the moment they use the same hyperparameters, but this may change
 hyperparameters = 'hyperparameters.toml'
