--- a/configs/maxi.toml
+++ b/configs/maxi.toml
@@ -4,5 +4,7 @@ checkpoint_dir = './checkpoints/maxi'
 dataset = 'maxi'
 tokenizer = 'bert'
 
+vocab_size = 30522  # this is for "bert-base-uncased"
+
 # At the moment they use the same hyperparameters, but this may change
 hyperparameters = 'hyperparameters.toml'
